# chrome-agent

./: .gitignore  AGENTS.md  HEADLESS-ORPHAN-BUG.md  INSTRUCTIONS.md  README.md  SPEC.md  TODO.md  pyproject.toml
.claude/skills/: dependency-analysis  feature-extraction  implement  implementation-plan  specify  vision-capture
docs/: cdp-collaboration-reference.md  collaboration-guide.md  monitor-integration.md
experiments/: 01_playwright_cdp_session.py  02_raw_websocket_cdp.py  03_raw_cdp_interactions.py  04_raw_cdp_waiting.py  agent_a_form.py  agent_b_network.py  agent_c_ax_perf.py  session_client.py  session_daemon.py  session_multi_client.py  session_repl.py  session_repl_test.py  token_test_cdp.py
planning/: 01-master-project-specification.md  02-feature-inventory.md  04-dependency-graph.json  04-dependency-matrix.md  05-implementation-plan.json  05-implementation-plan.md
planning/03-specs/: BRW-01-browser-launch.md  BRW-02-browser-status.md  BRW-03-fingerprint-profiles.md  BRW-04-instance-registry.md  BRW-05-instance-status.md  BRW-06-window-border.md  BRW-07-instance-supervisor.md  CDP-04-attach-mode.md  (+5 more)
research/: 2026-06-16-detection-audit.md  detection_audit_driver.py
scripts/: generate_bindings.py  observe.py  release.sh
tests/: conftest.py  fixture.html  test_attach.py  test_bindings.py  test_browser_status.py  test_cdp_client.py  test_cli.py  test_commands.py  test_fingerprint.py  test_instance_status.py  test_launcher.py  test_pid_identity.py  test_protocol_discovery.py  test_registry.py  test_session.py  test_supervisor.py  test_window_border.py
(+101 files in other folders)
