[project]
name = "chrome-agent"
version = "0.4.1"
description = "CLI tool for AI agents to observe and interact with Chrome via CDP"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Corey Gallon", email = "366332+captivus@users.noreply.github.com" }
]
keywords = ["chrome", "cdp", "devtools", "browser", "automation", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "websockets>=16.0",
]

[project.scripts]
chrome-agent = "chrome_agent.cli:main"

[project.urls]
Homepage = "https://github.com/captivus/chrome-agent"
Repository = "https://github.com/captivus/chrome-agent"
Issues = "https://github.com/captivus/chrome-agent/issues"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
